# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Api\V1\ArticleController;
 use App\Http\Controllers\Api\V1\AuthController;
 use App\Http\Controllers\Api\V1\SnippetController;
+use App\Http\Controllers\Api\V1\TagController;
 use Illuminate\Support\Facades\Route;
 
 // Route::get('/user', function (Request $request) {
@@ -18,6 +19,7 @@ Route::prefix('v1/auth')->middleware('throttle:auth')->group(function () {
 Route::prefix('v1')->middleware('throttle:api')->group(function () {
   Route::apiResource('articles', ArticleController::class)->only(['index', 'show']);
   Route::apiResource('snippets', SnippetController::class)->only(['index', 'show']);
+  Route::apiResource('tags', TagController::class)->only(['index', 'show']);
 });
 
 Route::prefix('v1')->middleware(['auth:sanctum', 'throttle:api'])->group(function () {
